# serializer version: 1
# name: test_changelog_no_remote
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Found 1 commits
      No remote found; cannot retrieve pull requests to generate changelog entry
  
    ''',
  })
# ---
# name: test_changelog_no_version
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      Found version 0.2.0
      Found previous version 0.1.0
      Found 2 commits since 0.1.0
      No remote found; cannot retrieve pull requests to generate changelog entry
  
    ''',
  })
# ---
# name: test_changelog_no_version_no_pyproject
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      No pyproject.toml file found; provide a version to generate an entry for.
  
    ''',
  })
# ---
